--- a/Proyectos/04Plantilla/src/app/facturas/nuevafactura/borrarfactura/borrarfactura.component.html
+++ b/Proyectos/04Plantilla/src/app/facturas/nuevafactura/borrarfactura/borrarfactura.component.html
@@ -3,7 +3,7 @@
       <app-card cardTitle="Lista de Proveedores" blockClass="pc-component">
         <div class="col-md-12 col-xl-8">
           <h5 class="mb-3">
-            <a href="nuevafactura" class="btn btn-outline-dark">Nuevo Factura</a>
+            <a href="borrarfactura" class="btn btn-outline-dark">Borrar Factura</a>
           </h5>
           <div class="card tbl-card">
             <div class="table-responsive">
@@ -18,17 +18,14 @@
                   </tr>
                 </thead>
                 <tbody>
-                  @for (factura of listafacturas; track $index) {
+                  @for (borrarfactura of listafacturas; track $index) {
                     <tr>
                       <td>{{ $index + 1 }}</td>
-                      <td>000{{ factura.idFactura }}</td>
-                      <td>{{ factura.Nombres }}</td>
-                      <td>{{ factura.total }}</td>
+                      <td>000{{ borrarfactura.idFactura }}</td>
+                      <td>{{ borrarfactura.Nombres }}</td>
+                      <td>{{ borrarfactura.total }}</td>
                       <td>
-                        <button type="button" class="btn btn-outline-success" [routerLink]="['/editarcliente/', factura.idFactura]">
-                          Editar
-                        </button>
-                        <button (click)="eliminar(factura.idFactura)" type="button" class="btn btn-outline-danger">Eliminar</button>
+                        <button (click)="eliminar(borrarfactura.idFactura)" type="button" class="btn btn-outline-danger">Eliminar</button>
                       </td>
                     </tr>
                   }
